@@ -101,7 +101,8 @@ module ActiveScaffold::Actions
           apply_constraints_to_record(@record, :allow_autosave => true)
           create_association_with_parent(@record) if nested?
           before_create_save(@record)
-          self.successful = [@record.valid?, @record.associated_valid?].all? # this syntax avoids a short-circuit
+          # errors to @record can be added by update_record_from_params when association fails to set and ActiveRecord::RecordNotSaved is raised
+          self.successful = [@record.errors.empty? && @record.valid?, @record.associated_valid?].all? # this syntax avoids a short-circuit
           create_save(@record) unless options[:skip_save]
         end
       rescue ActiveRecord::ActiveRecordError => ex
